<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChooseYourOwnAdventure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome Adventurer!</string>
    <string name="button_start_traveling">Start traveling</string>
    <string name="text_title_alley">ALLEY</string>
    <string name="text_question">You have ventured down a dark alley, where would you like to go next?</string>
    <string name="button_go_left">Go Left</string>
    <string name="button_go_right">Go Right</string>
    <string name="button_continue">Continue</string>
    <string name="text_title_room">Room</string>
    <string name="text_room_meesage">You have entered a room with two doors</string>
    <string name="button_door_one">Enter Door 1</string>
    <string name="button_door_two">Enter door 2</string>
    <string name="title_activity_alley">AlleyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="pref_category_customization">Customization</string>
    <string name="pref_username_title">Your name</string>
    <string name="pref_username_summary">Personalize your message with your name.</string>
    <string name="pref_difficulty_level">Difficulty</string>
    <string name="pref_difficulty_summary">Difficulty of the current game.</string>
    <string name="action_bar_title">C.Y.O.A.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="default_username">my friend</string>
</resources>
