<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.mobilemakers.chooseyourownadventure.RoomFragment"
    android:background="#ff8c582a">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal"
        android:id="@+id/text_title_room"
        android:text="@string/text_title_room" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_room_meesage"
        android:id="@+id/text_room_meesage" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:id="@+id/button_door_one"
            android:text="@string/button_door_one" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/button_door_two"
            android:text="@string/button_door_two" />
    </LinearLayout>

</FrameLayout>
